# switch-wallpaper-vala

./: README.md  com.github.mabhishek7081.wpvala.json  meson.build
data/: com.github.mabhishek7081.wpvala.appdata.xml.in  com.github.mabhishek7081.wpvala.desktop.in  com.github.mabhishek7081.wpvala.gschema.xml  meson.build
po/: POTFILES  meson.build
src/: main.vala  meson.build  switch.vala  switch_wallpaper_vala.gresource.xml
